<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/toolbar"
        android:background="@drawable/toolbar_background"
        app:title="Tugas3_Calculator"
        app:titleTextColor="@color/white"
        android:elevation="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:baselineAligned="false"
        android:layout_marginVertical="30dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_bilangan_1"
                android:labelFor="@+id/edit_bilangan_1"
                android:layout_centerHorizontal="true"
                android:text="@string/bilangan_1"
                android:textColor="@color/purple"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_bilangan_1"
                android:layout_centerHorizontal="true"
                android:minHeight="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="number"
                android:gravity="center"
                android:layout_below="@+id/label_bilangan_1"
                android:importantForAutofill="no" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_bilangan_2"
                android:labelFor="@+id/edit_bilangan_2"
                android:layout_centerHorizontal="true"
                android:text="@string/bilangan_2"
                android:textColor="@color/purple"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_bilangan_2"
                android:layout_centerHorizontal="true"
                android:minHeight="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="number"
                android:gravity="center"
                android:layout_below="@+id/label_bilangan_2"
                android:importantForAutofill="no" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_tambah"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/pink"
            android:background="@drawable/rounded_button"
            android:text="@string/tambah_icon"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_kurang"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/pink"
            android:background="@drawable/rounded_button"
            android:text="@string/kurang_icon"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_kali"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/pink"
            android:background="@drawable/rounded_button"
            android:text="@string/kali_icon"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_bagi"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/pink"
            android:background="@drawable/rounded_button"
            android:text="@string/bagi_icon"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_label"
            android:text="@string/result"
            android:layout_marginBottom="15dp"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_field"
            android:textSize="30sp"/>

    </LinearLayout>

</LinearLayout>